tests/ui/unterminated_string.stderr
error[E0002]: this text never gets a closing quote
  --> tests/ui/unterminated_string.lex:2:11
    |
  2 |     print("hello)
    |           ^^^^^^^
 why: a piece of text must start and end with a `"` on the same line
 fix: add a closing `"` before the end of the line
